@@ -71,6 +71,7 @@ public:
 private Q_SLOTS:
 
     void slotTitleChanged(const QString& newtitle);
+    void slotNewAlbumTextChanged(int index);
     void slotDateLowButtonClicked();
     void slotDateAverageButtonClicked();
     void slotDateHighButtonClicked();
