@@ -207,4 +207,5 @@ BUGFIXES:
 190 ==> 429787 - Delete Unassigned Tags: show list of the unassigned tags before deleting them,
 191 ==> 429820 - Radio buttons vs. checkboxes for Tags Matching Condition "OR/AND" chooser.
 192 ==> 429820 - Checkboxes should be radio buttons in Tags Matching Condition "OR/AND" chooser.
-193 ==> 
+193 ==> 429827 - Clarify parent when creating new album (UI shows a mismatch).
+194 ==> 
